# guetzli_lib

./: CMakeLists.txt  libguetzli.cpp  libguetzli.h
guetzli/: entry_point.h  guetzli.cc
